assets/css/screen.css
/* http://meyerweb.com/eric/tools/css/reset/
   v2.0 | 20110126
   License: none (public domain)
*/
/* stylelint-disable*/
a,abbr,acronym,address,applet,article,aside,audio,b,big,blockquote,body,canvas,caption,center,cite,code,dd,del,details,dfn,div,dl,dt,em,embed,fieldset,figcaption,figure,footer,form,h1,h2,h3,h4,h5,h6,header,hgroup,html,i,iframe,img,ins,kbd,label,legend,li,mark,menu,nav,object,ol,output,p,pre,q,ruby,s,samp,section,small,span,strike,strong,sub,summary,sup,table,tbody,td,tfoot,th,thead,time,tr,tt,u,ul,var,video{margin:0;padding:0;border:0;font:inherit;vertical-align:baseline}article,aside,details,figcaption,figure,footer,header,hgroup,main,menu,nav,section{display:block}html,.stylelint{line-height:1}.body{line-height:inherit}ol,ul{list-style:none}blockquote,q{quotes:none}blockquote:after,blockquote:before,q:after,q:before{content:'';content:none}table{border-collapse:collapse;border-spacing:0}
/* stylelint-enable */

/* Begin site styles below */

/*
  base font-size: 18px
  base line-height: 1.2 em
  1.618/Golden section "Phi" is our modular scale:
  https://www.modularscale.com/?18&px&1.618

  norm(1.618.Phi)//em(px/18)//lineheight(1.2x)
  .5x =  11.125px//.618em//.7416em
  1x  =  18px//1em//21.6(1.2em)
  1.5x=  23.562//1.309em//1.5708em
  2x  =  29.124px//1.618em//1.942em
  3x  =  47.123px//2.618em//3.142em
  4x  =  76.244px//4.236em//5.083em
}}

Palette URL: https://coolors.co/ffffff-b49ec9-d1c6db-2d2d39-989b9f
#ffffff
#b49ec9
#d1c6db
#2d2d39
#989b9f
Chose this for blue being a long lasting trusted color for reliability.  While we are a new company, we are growing and throwing green into the frey would help push that.  The red is meant to compliment, yet not hurt the eyes.



Font:
*/


/* Custom Site Styles */

/* ========== Base Styles ========== */
/* Base Styles (element selectors; color, typography, and that's it)*/
html {
  font-size: 1.125em;
  background-color: #d1c6db;
  color: #2d2d39;
}

body {
  padding: 1em;
  margin: 0;
  font-family: 'Titillium Web',sans-serif;

}

h1 {
  font-size: 2.618em;
}

h2 {
  font-size: 1.5708em;
  padding-bottom: 1em;
}

nav {
  float:right;
  width: 100%;
}
nav ul {
  list-style-type: none;
  margin: 0;
  padding: 0;
  background-color:grey;
}
nav li {
  display: inline-block;
  width: 3.33em;
  color: #000;
  padding-bottom: 1em;
  padding-top: 1em;
  padding-right: 1.5em;
}
nav a {
  color: #2d2d39
  text-transform:uppercase;
  display: block;
  position: absolute;
}
form {
  display: block;
  padding: 0.5em;
}

/* ========== Layout ========== */
/* Layout (id selectors; width/height, position, flexbox, grid)*/

#street {
  width: 27.78em;;
}

#checkout {
  display: block;
  box-sizing: border-box;
  border-radius: 1em;
  padding: 0.5em;
}

#nextpage, #menu {
  display: block;
  text-decoration: none;
  padding: 1.2em;

}
/* ========== Module ========== */
/* Module/Modular Section (class or descedent selectors; repeating specific styles) */

.nv * , .nv {/*Toggle this class to toggle visibility*/
  display: none;
}

.food-number {
  width: 2.8em;
}

.food {
  display: flex;
  flex-direction: column;
  padding: 0.5em;
}

.labels {
  display: flex;
  flex-direction: column;

}
.input {
  display: flex;
  width: 16.66em;
}
/* ========== State ========== */
/* State (repeat the structure above; media queries, JavaScript-dependent styles) */
@media screen and (min-width: 650px) {
  /*This is for adding columns and setting stopping paragraph from growing*/

  #menu-form {
    display: grid;
    grid-template-columns: 1fr 1fr;

  }
}

/*Baseline css*/
/**
* A quick baseline grid overlay using css+svg.
* Inspired by [Basehold.it](https://basehold.it/).
* @author leshido
*/

body.g {
  position: relative;
}

body.g::after {
  /* Change the `height` parameter here to match your base line-height. */
  background: url('data:image/svg+xml;utf8,<svg height="1.2em" width="1" xmlns="http://www.w3.org/2000/svg"><rect width="1" height="1.619" style="fill:rgba(255, 0, 0, 0.3)" /></svg>') repeat top left;

  content: "";
  display: block;
  pointer-events: none;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  z-index: 9999;
  position: absolute;
}

body.g:active::after {
  display: none;
}


/* Style Sheet Elements for Menu*/



/*Style Sheet Elements for Delivery */





/*Style Sheet Elements for Checkout */



/*Style Sheet Elements for Taster */

